# tree-sitter-example

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-example.h  tree-sitter-example.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_example/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterExampleTests/: TreeSitterExampleTests.swift
scripts/: lower_case.py
src/: grammar.json  node-types.json  parser.c  scanner.c
tests/: 1_1  1_2  1_3  1_4  1_5_1  1_5_2  1_5_3  1_5_4  1_5_5  1_5_6  1_6_1  1_6_2  1_6_3  1_6_4  1_6_5  1_6_6  1_7  2_1  2_2  2_3  2_4  2_5_1  2_5_2  2_5_3  2_5_4  2_5_5  3_1  4_1  4_10  4_2  4_3  4_4  4_5  4_6  4_7  4_8  4_9  5_1  5_2  5_3  (+4 more)
