[package]
name = "tree-sitter-example"
description = "An example language parser."
version = "0.1.0"
authors = ["Yu Liu <1234567@qq.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "example"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-example"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
